fix: nav disclosure section dark mode [JOB-111816] (#2249)
Update NavMenu.module.css

--- a/packages/site/src/layout/NavMenu.module.css
+++ b/packages/site/src/layout/NavMenu.module.css
@@ -109,3 +109,9 @@
   }
 }
 
+:root[data-theme="dark"] .navMenuContainer {
+  button {
+    mix-blend-mode: screen;
+  }
+}
+
